Add Jenkinsfile option to build on z/OS
This update allows Jenkins to build on z/OS platforms. This should also automatically trigger z/OS builds when PRs are opened. Currently, this support is only available for Java 25.

Signed-off-by: Thomas-Ginader <thomas.ginader@ibm.com>